tests/paczka1/small_fuzzy/35503765.err
Error in line 6: IUpFi S713 9,0
Error in line 13: IUpFi A393 68,6
